--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Teezy - Custom Print T-Shirt Shop</title>
+    <title>Teezy</title>
     <meta name="description" content="Premium custom printed t-shirts with high-quality designs and materials. Create your own unique t-shirt or shop our collection." />
     <meta name="author" content="Teezy" />
 
